fixed issue of latest plant pic not showing in left column

--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -637,3 +637,8 @@ main.main-info {
 }
 
 
+.carousel-item img {
+  height: 15rem;
+  width: 100%;
+  object-fit: cover;
+}
